--- a/productSurvey/product_survey.html
+++ b/productSurvey/product_survey.html
@@ -31,7 +31,11 @@
   
   <label for="feedbackText">Feedback:</label><br>
   <textarea id="feedbackText" rows="5" cols="30" placeholder="Enter your feedback here" required></textarea><br>
-    <button id="submitBtn">Submit Feedback</button>
+
+  <label for="experienceText">User Experience:</label><br>
+  <textarea name="experienceText" id="experienceText" cols="30" rows="10" placeholder="Enter your user experience with the product here"></textarea><br>
+    
+  <button id="submitBtn">Submit Feedback</button>
     <hr>
     <div id="userInfo" style="display: none;">
     <h2>User Information:</h2>
@@ -41,6 +45,7 @@
     <p>Job: <span id="userJob"></span></p>
     <p>Designation: <span id="userDesignation"></span></p>
     <p>Feedback for  <span id="userProductChoice"></span>: <span id="userFeedback"></span></p>
+    <p>User experience for  <span id="userProductChoice2"></span>: <span id="userExperience"></span></p>
     </div>
 
     <script src="./product_survey.js"></script>
